--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,11 @@
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
-    background-color:rgb(150, 183, 238) ;
+    background-color:white ;
   }
   
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.nerko-one-regular {
-  font-family: "Nerko One", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
+
