--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
     text-align: center;
-    background-color:#f5e9da;
+    background: linear-gradient(rgb(253, 232, 177),rgb(246, 228, 193),white );
     padding-left: 50px;
     padding-right: 50px;
   }
