--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,12 @@ section{
   color: #518945
 }
 
+.aboutme{
+  background: #ccc092;
+  border-radius: 2rem;
+  padding: 1rem;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
