--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
     text-align: center;
     background: linear-gradient(rgb(253, 232, 177),rgb(246, 228, 193),white );
+    min-height: 100%;
+    position: relative;
   }
 
 nav{
@@ -18,7 +20,6 @@ section{
 }
 
 .aboutme{
-  background: #ccc092;
   border-radius: 2rem;
   padding: 1rem;
 }
